Fix autocomplete not working properly with nicknames